# websocketer

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  sample_bench.cpp  ws_bench.cpp
cmake-modules/: certify-config.cmake
docker/: CMakeLists.txt  Dockerfile.in
examples/: CMakeLists.txt  example1.cpp
examples/cmake-modules/: uriparser-config.cmake  uriparserpp-config.cmake
include/websocketer/: close.h  close.hpp  connect.h  connect.hpp  error_code.h  handshake.h  handshake.hpp  isession.h  isocket.h  open.h  open.hpp  read.h  read.hpp  resolve.h  resolve.hpp  session.h  socket.h  socket.hpp  socket.ipp  ssl_handshake.hpp  ssocket.hpp  ssocket.ipp  websocketer.h  websocketer.hpp  write.h  write.hpp  ws.h  ws.hpp  wss.hpp
tests/: CMakeLists.txt  close_tests.cpp  connect_tests.cpp  handshake_tests.cpp  open_tests.cpp  read_tests.cpp  resolve_tests.cpp  session_tests.cpp  socket_tests.cpp  ws_tests.cpp  wss_test.cpp
